--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -16,7 +16,7 @@ a {
     text-decoration: none;
 }
 
-.header-container {
+.haydora header-container {
     width: 100%;
     display: flex;
     align-items: center;
@@ -48,9 +48,9 @@ a {
 }
 
 
-/* Header section */
+/* haydora section */
 
-#header {
+#haydora {
     position: relative;
     z-index: 1000;
     left: 0;
@@ -59,13 +59,13 @@ a {
     height: auto;
 }
 
-#header .header {
+#haydora .haydora {
     min-height: 8vh;
     background-color: rgba(31, 30, 30, 0.24);
     transition: .3s ease background-color;
 }
 
-#header .nav-bar {
+#haydora .nav-bar {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -75,7 +75,7 @@ a {
     padding: 0 10px;
 }
 
-#header .nav-list ul {
+#haydora .nav-list ul {
     list-style: none;
     position: absolute;
     background-color: rgb(31, 30, 30);
@@ -92,11 +92,11 @@ a {
     transition: .5s ease left;
 }
 
-#header .nav-list ul.active {
+#haydora .nav-list ul.active {
     left: 0%;
 }
 
-#header .nav-list ul a {
+#haydora .nav-list ul a {
     font-size: 2.5rem;
     font-weight: 500;
     letter-spacing: .2rem;
@@ -107,7 +107,7 @@ a {
     display: block;
 }
 
-#header .nav-list ul a::after {
+#haydora .nav-list ul a::after {
     content: attr(data-after);
     position: absolute;
     top: 50%;
@@ -120,16 +120,16 @@ a {
     transition: .3s ease letter-spacing;
 }
 
-#header .nav-list ul li:hover a::after {
+#haydora .nav-list ul li:hover a::after {
     transform: translate(-50%, -50%) scale(1);
     letter-spacing: initial;
 }
 
-#header .nav-list ul li:hover a {
+#haydora .nav-list ul li:hover a {
     color: crimson;
 }
 
-#header .hamburger {
+#haydora .hamburger {
     height: 60px;
     width: 60px;
     display: inline-block;
@@ -145,7 +145,7 @@ a {
     margin-right: 20px;
 }
 
-#header .hamburger:after {
+#haydora .hamburger:after {
     position: absolute;
     content: '';
     height: 100%;
@@ -155,7 +155,7 @@ a {
     animation: hamburger_puls 1s ease infinite;
 }
 
-#header .hamburger .bar {
+#haydora .hamburger .bar {
     height: 2px;
     width: 30px;
     position: relative;
@@ -163,8 +163,8 @@ a {
     z-index: -1;
 }
 
-#header .hamburger .bar::after,
-#header .hamburger .bar::before {
+#haydora .hamburger .bar::after,
+#haydora .hamburger .bar::before {
     content: '';
     position: absolute;
     height: 100%;
@@ -175,24 +175,24 @@ a {
     transition-property: top, bottom;
 }
 
-#header .hamburger .bar::after {
+#haydora .hamburger .bar::after {
     top: 8px;
 }
 
-#header .hamburger .bar::before {
+#haydora .hamburger .bar::before {
     bottom: 8px;
 }
 
-#header .hamburger.active .bar::before {
+#haydora .hamburger.active .bar::before {
     bottom: 0;
 }
 
-#header .hamburger.active .bar::after {
+#haydora .hamburger.active .bar::after {
     top: 0;
 }
 
 
-/* End Header section */
+/* End haydora section */
 
 
 /* Keyframes */
@@ -255,27 +255,27 @@ a {
 /* Media Query For Desktop */
 
 @media only screen and (min-width: 1200px) {
-    /* header */
-    #header .hamburger {
+    /* haydora */
+    #haydora .hamburger {
         display: none;
     }
-    #header .nav-list ul {
+    #haydora .nav-list ul {
         position: initial;
         display: block;
         height: auto;
         width: fit-content;
         background-color: transparent;
     }
-    #header .nav-list ul li {
+    #haydora .nav-list ul li {
         display: inline-block;
     }
-    #header .nav-list ul li a {
+    #haydora .nav-list ul li a {
         font-size: 1.8rem;
     }
-    #header .nav-list ul a:after {
+    #haydora .nav-list ul a:after {
         display: none;
     }
-    /* End header */
+    /* End haydora */
 }
 
 a {
@@ -295,7 +295,7 @@ a:hover {
 
 /* Animation*/
 
-.header {
+.haydora {
     animation: fadeDown 1200ms forwards;
     opacity: 0;
 }
