--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,34 +29,8 @@
 		{% endblock %}
 	</head>
 	<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{{path('app_home')}}">Home</a>
-        </li>
-		{% if app.user is null %}
-        <li class="nav-item">
-          <a class="nav-link" href="{{path('app_login')}}">Login</a>
-        </li>
-		        <li class="nav-item">
-          <a class="nav-link" href="{{path('app_register')}}">Register</a>
-        </li>
-		{% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="#">Logout</a>
-        </li>
-		{% endif %}
-        
-      </ul>
-    </div>
-  </div>
-</nav>
+		{% embed 'header.html.twig' %}
+		{% endembed %}
 		{% block body %}{% endblock %}
 	</body>
 </html>
