--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,28 +1,28 @@
-<link rel="stylesheet" href="/assets/header.css">
+<link rel="stylesheet" href="/assets/css/header.css">
 <link rel="shortcut icon" type="image/x-icon" href=./img/Carpour.png />
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <body>
  <!-- Header -->
-  <section id="header">
-    <div class="header container">
+  <section id="haydora">
+    <div class="haydora header-container">
       <div class="nav-bar">
         <div class="brand">
-          <h1><span>C</span>ar<span>P</span>our</h1>
+          <h1><span>F</span>o<span>R</span>um</h1>
         </div>
         <div class="nav-list">
           <div class="hamburger"><div class="bar"></div></div>
           <ul>
-            <li><a href="" data-after="Home">Home</a></li>
+            <li><a href="{{path('app_home')}}" data-after="Home">Home</a></li>
             <li><a href="" data-after="Ranks">Ranks</a></li>
             <li><a href="" data-after="Builds">Builds</a></li>
             <li><a href="" data-after="About">About</a></li>
             <li><a href="" data-after="Contact">Contact</a></li>
-            <li><a href="Log In/index.html">Sign in</a></li>
+            {% if app.user %} <li><a href="{{path('app_profile_settings')}}"> Hello {{app.user.username}} </a></li> {% else %} <li><a href="{{path('app_login')}}"> Sign in </a></li> {% endif %} 
           </ul>
         </div>
       </div>
     </div>
   </section>
   <!-- End Header -->
-    <script src="/assets/header.js"></script>
+    <script src="/assets/javascript/header.js"></script>
 </body>
