adjustements to profile image

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,8 +29,10 @@
 		{% endblock %}
 	</head>
 	<body>
+{% block header %}
 		{% embed 'header.html.twig' %}
 		{% endembed %}
+{% endblock %}
 		{% block body %}{% endblock %}
 	</body>
 </html>
