added AbstractPost class and refactored code

--- a/public/assets/css/view_post.css
+++ b/public/assets/css/view_post.css
@@ -15,13 +15,13 @@
     padding: 1em;
 }
 
-.creator-picture {
+.author-picture {
     display: block;
     width: 90px;
     height: 90px;
 }
 
-.creator-name {
+.author-name {
     font-weight: bold;
 }
 
