fixed last post for topic

--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -1,6 +1,10 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #e9f0f5;
+    min-height: 100vh;
+    margin-bottom: 100px;
+    clear: both;
+
 }
 
 .container {
