--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,4 +1,4 @@
-    <footer>
+    <footer class="mt-5">
         <div class="footer-tabs">
             <div class="footer-important">
                 <div class="footer-tab"> <a href="">Privacy Policy</a></div>
@@ -11,3 +11,8 @@
         </div>
         <div class="footer-copyright">© Lorem Ipsum. 2022</div>
     </footer>
+    <style>
+        footer#top {
+            margin-bottom:80px;
+        }
+    </style>
