--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,6 +3,9 @@
 {% block title %}Log in!
 {% endblock %}
 {% block body %}
+	<div class="container min-vh-100">
+
+
 	<div id="login-wrapper" class="card mt-3">
 		<div class="login-img-container card-img text-center"><img id="login-img" class="rounded-circle" src="https://picsum.photos/200"/></div>
 		<div class="card-body">
@@ -52,6 +55,7 @@
 			</div>
 
 		</div>
+	</div>
 	</div>
 	{% embed 'footer.html.twig' %}
 	{% endembed %}
