Added category statistics Added PagerService.php Added 3 twig functions Added widget for general statistics Refactored code

--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -22,6 +22,10 @@ a {
     align-items: center;
     justify-content: center;
 }
+#haydora
+{
+    margin-bottom: 10px;
+}
 
 .section-title {
     font-size: 4rem;
