--- a/public/assets/css/widget.css
+++ b/public/assets/css/widget.css
@@ -14,4 +14,11 @@
     height: auto;
     width: 100%;
     margin-right: 5px;
+
+}
+.stats-header
+{
+    font-size: 10px;
+    font-weight: bold;
+    color: #00A0C6;
 }
