--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -4,14 +4,7 @@
 
 
 	<div class="row">
-		<div class="col-6 text-center">
-			<div class="card">
-				<div class="card-title text-muted">Statistiques for registered users by Year</div>
-				{{render_chart(birthstats)}}
-
-			</div>
-		</div>
-		<div class="col-6">
+		<div class="col">
 			<div class="card">
 				<div class="card-title text-muted">Statistiques for registrations</div>
 				{{render_chart(registrations)}}
