--- a/templates/topic/create_post.html.twig
+++ b/templates/topic/create_post.html.twig
@@ -10,7 +10,7 @@
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container min-vh-100">
     {{form(form)}}
 
     </div>
