--- a/templates/topic/list.html.twig
+++ b/templates/topic/list.html.twig
@@ -1,71 +1,77 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TopicController!
+{% block title %}{{ currentCategory.title }}
 {% endblock %}
 {% block body %}
 
-	<div class="container min-vh-100">
-		            <div class="d-flex flex-wrap justify-content-between mt-5">
-               <div>
-			   <a href="{{path('app_topic_create', {id: id})}}">
-                  <button type="button" class="btn btn-shadow btn-wide btn-primary">
+    <div class="container min-vh-100">
+        <div class="d-flex flex-wrap justify-content-between mt-5">
+            <div>
+                <a href="{{ path('app_topic_create', {category: currentCategory.id}) }}">
+                    <button type="button" class="btn btn-shadow btn-wide btn-primary">
                   <span class="btn-icon-wrapper pr-2 opacity-7">
                   <i class="fa fa-plus fa-w-20"></i>
                   </span>
-                  New thread
-                  </button>
-				  </a>
-               </div>
-               <div class="col-12 col-md-3 p-0 mb-3">
-                  <input type="text" class="form-control" placeholder="Search...">
-               </div>
+                        New Topic
+                    </button>
+                </a>
             </div>
-
-            <div class="card mb-3">
-               <div class="card-header pl-0 pr-0">
-                  <div class="row no-gutters w-100 align-items-center">
-                     <div class="col ml-3">Topics</div>
-					 			
-                     <div class="col-4 text-muted">
-                        <div class="row no-gutters align-items-center">
-                           <div class="col-4">Replies</div>
-                           <div class="col-8">Last update</div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-			   {% for topic in topics %}
-               <div class="card-body py-3">
-                  <div class="row no-gutters align-items-center">
-                     <div class="col">
-                        <a href="{{ path('app_topic_view', {id: topic.id}) }}" class="text-big" data-abc="true">{{topic.title}}</a>
-                        <div class="text-muted small mt-1">{{topic.createdAt | date() }} &nbsp;&middot;&nbsp; <a href="javascript:void(0)" class="text-muted" data-abc="true">{{topic.author.username}}</a></div>
-                     </div>
-                     <div class="d-none d-md-block col-4">
-                        <div class="row no-gutters align-items-center">
-                           <div class="col-4">{{ topic.comments.count }}</div>
-                           <div class="media col-8 align-items-center">
-                              <img src="{{pictures[topic.author.id]}}" width=30px height=30px alt="" class="d-block ui-w-30 rounded-circle">
-                              <div class="media-body flex-truncate ml-2">
-                                 <div class="line-height-1 text-truncate">{{lastPosts[topic.id].createdAt | date()}}</div>
-                                 <a href="{{ path('app_topic_view', {id: topic.id}) }}" class="text-muted small text-truncate" data-abc="true">{{lastPosts[topic.id].lastPostIdentifier | striptags }}</a>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-			      {% endfor %}
-			   			
-			   
-
-               <hr class="m-0">
-
-			         {{ pagerfanta(topics) }}
+            <div class="col-12 col-md-3 p-0 mb-3">
+                <input type="text" class="form-control" placeholder="Search...">
             </div>
+        </div>
 
+        <div class="card mb-3">
+            <div class="card-header pl-0 pr-0">
+                <div class="row no-gutters w-100 align-items-center">
+                    <div class="col ml-3">Topics</div>
+
+                    <div class="col-4 text-muted">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col-4">Replies</div>
+                            <div class="col-8">Last update</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% for topic in topics %}
+                {% set lastPost = lastAbstractPost(topic) %}
+
+                <div class="card-body py-3">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col">
+                            <a href="{{ path('app_topic_view', {id: topic.id}) }}" class="text-big"
+                               data-abc="true">{{ topic.title }}</a>
+                            <div class="text-muted small mt-1">{{ topic.createdAt | date() }} &nbsp;&middot;&nbsp; <a
+                                        href="javascript:void(0)" class="text-muted"
+                                        data-abc="true">{{ topic.author.username }}</a></div>
+                        </div>
+                        <div class="d-none d-md-block col-4">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col-4">{{ topic.comments.count }}</div>
+                                <div class="media col-8 align-items-center">
+                                    <img src="{{ userImagePath(topic.author) }}" width=30px height=30px alt=""
+                                         class="d-block ui-w-30 rounded-circle">
+                                    <div class="media-body flex-truncate ml-2">
+                                        <div class="line-height-1 text-truncate">{{ lastPost.createdAt | date() }}</div>
+                                        <a href="{{ path('app_topic_view', {id: topic.id}) }}"
+                                           class="text-muted small text-truncate"
+                                           data-abc="true">{{lastPost.lastPostIdentifier | striptags }}</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+
+
+            <hr class="m-0">
+
+            {{ pagerfanta(topics) }}
+        </div>
 
 
     </div>
-   {% embed 'footer.html.twig' %}{% endembed %}
-       {% endblock %}
+    {% embed 'footer.html.twig' %}{% endembed %}
+{% endblock %}
